# grupProject3

./: .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt  setup.py
src/: class_Note.py  class_NotesBook.py  data_decorators.py  db_manager.py  faker_db_manager.py
src/menu/: abstractmethod_models.py  check_birthday_menu.py  contact_menu.py  note_menu.py
src/menu/console_interface/: MainMenu.py  Manage_Contacts.py  check_birthday_menu.py  console_interface_main.py  contact_menu.py  note_menu.py
src/menu/console_interface/abstractmethod/: main_menu.py  manage_contacts.py  manage_notes.py
src/mongodb/: README.md  class_NotesBook.py  db_connection.py  db_manager.py  db_repository.py  models.py
src/mongodb_atlas/: atlas_connection.py  atlas_repository.py  models.py
src/utils/: data_decorators.py  faker_db_manager.py  get_days_to_birthday.py  name_day.py  send_email.py  sms_api.py  whens_birthday.py
src/utils/contact_book/: contact_book_collector.py  contact_book_manager.py
src/utils/notes_book/: notes_book_collector.py  notes_book_manager.py  notesbook_collector.py  notesbook_manager.py
tests/: add_contact_and_note.py  delete_note.py  edit_by_criteria.py  edit_note.py  look_for_doubles.py  read_all_contact_book.py  read_all_notes_book.py  run_tests.py  sort_notes_book.py  temp_test.py  test_birthday.py  test_birthday_wish.py  test_contact_book.py  test_create_input.py  test_get_birthday_wish.py  test_get_days_to_birthday.py  test_name_dat.py  test_note_book.py  test_send_email.py  test_send_sms.py  tests.py
