[tool.poetry]
name = "grupProject3"
version = "0.1.0"
description = ""
authors = ["sebastianLedzianowski <136706736+sebastianLedzianowski@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "3.8.6"
aiosignal = "1.3.1"
async-timeout = "4.0.3"
attrs = "23.1.0"
beautifulsoup4 = "4.12.2"
beautifultable = "1.1.0"
blinker = "1.7.0"
build = "1.0.3"
cachecontrol = "0.13.1"
certifi = "2023.7.22"
cffi = "1.16.0"
charset-normalizer = "3.3.0"
cleo = "2.1.0"
click = "8.1.7"
colorama = "0.4.6"
coverage = "7.3.2"
crashtest = "0.4.1"
distlib = "0.3.7"
dnspython = "2.4.2"
dulwich = "0.21.6"
faker = "19.10.0"
fastjsonschema = "2.18.1"
filelock = "3.13.1"
flask = "3.0.0"
frozenlist = "1.4.0"
idna = "3.4"
importlib-metadata = "6.8.0"
iniconfig = "2.0.0"
installer = "0.7.0"
itsdangerous = "2.1.2"
jaraco-classes = "3.3.0"
jinja2 = "3.1.2"
keyring = "24.2.0"
kickbox = "2.0.4"
markupsafe = "2.1.3"
mongomock = "4.1.2"
more-itertools = "10.1.0"
msgpack = "1.0.7"
multidict = "6.0.4"
openai = "0.28.1"
packaging = "23.2"
pexpect = "4.8.0"
pipenv = "2023.10.24"
pipfile = "0.0.2"
pkginfo = "1.9.6"
platformdirs = "3.11.0"
pluggy = "1.3.0"
poetry = "1.7.0"
poetry-core = "1.8.1"
poetry-plugin-export = "1.6.0"
ptyprocess = "0.7.0"
pycparser = "2.21"
pymongo = "4.5.0"
pyproject-hooks = "1.0.0"
pytest = "7.4.2"
pytest-cov = "4.1.0"
python-calendarific = "1.0.0"
python-dateutil = "2.8.2"
python-dotenv = "1.0.0"
rapidfuzz = "3.5.2"
requests = "2.31.0"
requests-mock = "1.11.0"
requests-toolbelt = "1.0.0"
sentinels = "1.0.0"
shellingham = "1.5.4"
six = "1.16.0"
smsapi-client = "2.9.5"
soupsieve = "2.5"
toml = "0.10.2"
tomlkit = "0.12.2"
tqdm = "4.66.1"
trove-classifiers = "2023.11.7"
urllib3 = "2.0.6"
validate-email = "1.3"
validate-email-address = "1"
virtualenv = "20.24.6"
wcwidth = "0.2.9"
werkzeug = "3.0.1"
xattr = "0.10.1"
yarl = "1.9.2"
zipp = "3.17.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
